--- a/BlogMVC/BlogMVC/Views/Home/Index.cshtml
+++ b/BlogMVC/BlogMVC/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
- 
 
-index - home 
+
+@Html.RouteLink("Blogs",new {
+    controller="Blogs",action = "Create"
+})
+
+home  -  index 
