--- a/BlogMVC/BlogMVC/Content/Site.css
+++ b/BlogMVC/BlogMVC/Content/Site.css
@@ -22,3 +22,17 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.card {
+    margin-top: 25px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
+    
