--- a/BlogMVC/BlogMVC/Views/Blogs/Create.cshtml
+++ b/BlogMVC/BlogMVC/Views/Blogs/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BlogMVC.Models.DTO.BlogDto
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "new Post";
 }
 
-<h2>Create new record</h2>
+<h2>New Post</h2>
 
 
 @using (Html.BeginForm())
@@ -12,14 +12,14 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Blog</h4>
-        <hr />
+        <hr />  
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Header, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Header, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Header, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -34,15 +34,17 @@
 
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-success" />
+
+                @Html.ActionLink("Back to List", "Index","Blogs",null,new{@class= "btn btn-secondary offset-1" })
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+  
 </div>
 
 @section Scripts {
