--- a/BlogMVC/BlogMVC/Views/Blogs/Delete.cshtml
+++ b/BlogMVC/BlogMVC/Views/Blogs/Delete.cshtml
@@ -4,19 +4,16 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Blog</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Header)
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Header)
+            @Html.DisplayFor(model => model.Title)
         </dd>
 
         <dt>
