--- a/BlogMVC/BlogMVC/Views/Blogs/Details.cshtml
+++ b/BlogMVC/BlogMVC/Views/Blogs/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Header)
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Header)
+            @Html.DisplayFor(model => model.Title)
         </dd>
 
         <dt>
